core/media/executor/outputs/3051eeb3-ad85-40ad-bf85-71c1228c9cec.txt
  File "C:\Users\Administrator\OneDrive\Desktop\Oj\Project\core\media\executor\codes\3051eeb3-ad85-40ad-bf85-71c1228c9cec.py", line 2
    if(a==0 || a==1):
             ^
SyntaxError: invalid syntax
